# jmap-hs

./: LICENSE  README.md  jmap-hs.cabal
doc/: well-known-response.json
examples/: GetAccountIdAndApiURL.hs  GetSession.hs  README.md  Utils.hs
src/Lib/: Prelude.hs
src/Network/: JMAP.hs
src/Network/JMAP/: Exceptions.hs  Types.hs  Util.hs  Version.hs
src/Network/JMAP/Types/: Base.hs  Internal.hs
